# fuzzy

./: .gitignore  Cargo.toml  README.md  input.yml  output.txt
dictionary/: cves.yml  files.yml  ldap-injections.yml  server-code-injection.yml  sql-injection.yml  strings.yml  template-injection.yml  xss-injection.yml
src/: main.rs
src/cli/: cli.rs
src/domain/: dictionary.rs  input.rs  mod.rs
src/fuzzer/: data_channels.rs  fuzzy.rs  metrics.rs  mod.rs  result_aggregator.rs
