[package]
name = "fuzzy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
structopt = "0.3.26"
tokio = { version = "1.29.1", features = ["full", "sync"] }
reqwest = { version = "0.11.18", features = ["json"] }
url = "2.4.0"
